@startuml backend_domain_model
skinparam style strictuml
title "Backend Domain Model"

class Device {
  id : String
  name : String
  last_seen : DateTime
}

class Component {
  device_id : String
  local_id : String
  model_name : String
  component_type : String
}

class Measurement {
  device_id : String
  component_local_id : String
  created_at : DateTime
  mean_adc : Integer
  moisture_percent : Integer
}

Device "1" -- "0..*" Component
Component "1" -- "0..*" Measurement

@enduml
